--- a/css/style.less
+++ b/css/style.less
@@ -107,19 +107,19 @@ button[type="reset"]{
             min-height: 150px;
         }
         .card-image-living-room{
-            background-image: url(/assets/item-image/item-1.jpg);
+            background-image: url(./assets/item-image/item-1.jpg);
         }
         .card-image-kids-room{
-            background-image: url(/assets/item-image/item-2.jpg);
+            background-image: url(./assets/item-image/item-2.jpg);
         }
         .card-image-garderob{
-            background-image: url(/assets/item-image/item-3.jpg);
+            background-image: url(./assets/item-image/item-3.jpg);
         }
         .card-image-bedroom{
-            background-image: url(/assets/item-image/item-4.jpg);
+            background-image: url(./assets/item-image/item-4.jpg);
         }
         .card-image-kitchen{
-            background-image: url(/assets/item-image/item-5.jpg);
+            background-image: url(./assets/item-image/item-5.jpg);
         }
         .card-title{
             text-align: center;
@@ -134,11 +134,11 @@ button[type="reset"]{
 .rating {
     width: 70px;
     margin: 0 auto;
-    background: url(/assets/icon/star-1.png) repeat-x;
+    background: url(./assets/icon/star-1.png) repeat-x;
 }
 .rating div {
     height: 12px;
-    background: url(/assets/icon/star-2.png) repeat-x;
+    background: url(./assets/icon/star-2.png) repeat-x;
     width: 85%;
 }
 .item-slider-wrapper{
