--- a/css/style.css
+++ b/css/style.css
@@ -78,19 +78,19 @@ button[type="reset"] {
   min-height: 150px;
 }
 .section .card-category .card-image-living-room {
-  background-image: url(/assets/item-image/item-1.jpg);
+  background-image: url(assets/item-image/item-1.jpg);
 }
 .section .card-category .card-image-kids-room {
-  background-image: url(/assets/item-image/item-2.jpg);
+  background-image: url(assets/item-image/item-2.jpg);
 }
 .section .card-category .card-image-garderob {
-  background-image: url(/assets/item-image/item-3.jpg);
+  background-image: url(assets/item-image/item-3.jpg);
 }
 .section .card-category .card-image-bedroom {
-  background-image: url(/assets/item-image/item-4.jpg);
+  background-image: url(assets/item-image/item-4.jpg);
 }
 .section .card-category .card-image-kitchen {
-  background-image: url(/assets/item-image/item-5.jpg);
+  background-image: url(assets/item-image/item-5.jpg);
 }
 .section .card-category .card-title {
   text-align: center;
@@ -103,11 +103,11 @@ button[type="reset"] {
 .rating {
   width: 70px;
   margin: 0 auto;
-  background: url(/assets/icon/star-1.png) repeat-x;
+  background: url(assets/icon/star-1.png) repeat-x;
 }
 .rating div {
   height: 12px;
-  background: url(/assets/icon/star-2.png) repeat-x;
+  background: url(assets/icon/star-2.png) repeat-x;
   width: 85%;
 }
 .item-slider-wrapper {
