--- a/css/style.less
+++ b/css/style.less
@@ -119,11 +119,11 @@ button[type="reset"]{
 .rating {
     width: 70px;
     margin: 0 auto;
-    background: url(./assets/icon/star-1.png) repeat-x;
+    background: url(/assets/icon/star-1.png) repeat-x;
 }
 .rating div {
     height: 12px;
-    background: url(./assets/icon/star-2.png) repeat-x;
+    background: url(/assets/icon/star-2.png) repeat-x;
     width: 85%;
 }
 .item-slider-wrapper{
