--- a/css/style.less
+++ b/css/style.less
@@ -48,8 +48,15 @@ button[type="reset"]{
     .navbar-nav{
         justify-content: space-between;
         width: 100%;
+        .dropdown-menu{
+           top: 120%;
+        }
+    }
+    .navbar-toggler{
+        border: none;
     }
 }
+
 .menu-navbar-position{
     position: fixed;
     width: 100%;
@@ -152,7 +159,7 @@ button[type="reset"]{
     display: grid;
     grid-auto-flow: column;
     grid-gap: 1.4rem;
-    padding: 5px;
+    // padding: 5px;
     .product-wrpper{
         .card-title{
             text-transform: capitalize;
@@ -259,11 +266,8 @@ button[type="reset"]{
 
 .aditional-information {
     ul {
-        list-style-type: square;
-        list-style-position: outside;
-        list-style-image: none;
         li{
-            padding: 5px 0;
+            background-color: lighten(@dark-color, 75%);
         }
     }
 }
@@ -473,6 +477,68 @@ footer{
     }
 }
 
+.filter-section{
+    padding: 30px 0 !important;
+    .filter-wrapper{
+        padding: 0 15px;
+        >p{
+            font-size: 25px;
+            // margin: 0;
+            color: @brand-color;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            font-weight: 600;
+        }
+        .filter-content{
+            position: relative;
+            strong{
+                font-size: @card-title-size;
+                text-transform: capitalize;
+                margin: 10px 0;
+                display: block;
+            }
+            .form-check{
+                margin: 5px 0;
+                display: block;
+            }
+            .slidecontainer {
+                width: 100%;
+                .slider {
+                  -webkit-appearance: none;
+                  width: 100%;
+                  height: 25px;
+                  background: lighten(@dark-color, 70%);
+                  outline: none;
+                  opacity: 0.7;
+                  -webkit-transition: .2s;
+                  transition: opacity .2s;
+                }
+                .slider:hover {
+                  opacity: 1;
+                }
+                .slider::-webkit-slider-thumb {
+                  -webkit-appearance: none;
+                  appearance: none;
+                  width: 25px;
+                  height: 25px;
+                  background: @brand-color;
+                  cursor: pointer;
+                }
+                .slider::-moz-range-thumb {
+                  width: 25px;
+                  height: 25px;
+                  background: @brand-color;
+                  cursor: pointer;
+                }
+                p{
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                }
+            }
+        }
+    }
+}
 @media (min-width: 320px) {
     .item-slider-wrapper .item-slider-max-5 {
       grid-auto-columns: calc((100% - (2 - 1) * 1.4rem)/2);
